# budget

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
docs/superpowers/plans/: 2026-05-23-budget-app.md
docs/superpowers/specs/: 2026-05-23-budget-app-design.md
models/: schema.py
pages/: 10_Save.py  11_Crypto.py  1_Dashboard.py  2_Bills.py  3_Envelopes.py  4_BNPL.py  5_Goals.py  6_Transactions.py  7_Settings.py  8_Emergency_Fund.py  9_Debt.py
scripts/: fixup_marked_paid.py  plaid_link.py  set_password.py
services/: auth.py  bnpl_dedup.py  bnpl_detector.py  budget_engine.py  categorizer.py  config.py  crypto.py  crypto_logos.py  dashboard_data.py  data_io.py  db.py  debt_payoff.py  emergency_fund.py  envelope_data.py  paycheck_calendar.py  paycheck_view.py  plaid_client.py  plaid_sync.py  savings_goal.py  savings_summary.py  secret_store.py  ui_theme.py
tests/: conftest.py  test_auth.py  test_bnpl_dedup.py  test_bnpl_detector.py  test_budget_engine.py  test_categorizer.py  test_config.py  test_crypto.py  test_crypto_logos.py  test_dashboard_data.py  test_data_io.py  test_db.py  test_debt_payoff.py  test_emergency_fund.py  test_envelope_data.py  test_paycheck_calendar.py  test_paycheck_view.py  test_perf_bench.py  test_plaid_readonly.py  test_plaid_sync.py  test_savings_goal.py  test_savings_summary.py  test_secret_store.py  test_ui_smoke.py  test_ui_theme.py
tests/fixtures/: plaid_accounts.json  plaid_recurring.json  plaid_sync_page1.json  plaid_sync_page2.json
