[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["services", "models", "scripts"]

[project]
name = "budget"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.32",
  "plaid-python>=22.0.0",
  "sqlmodel>=0.0.16",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "python-dateutil>=2.9",
  "holidays>=0.45",
  "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "freezegun>=1.4",
  "ruff>=0.3",
  "black>=24.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=services --cov=models --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
ignore = ["E702"]  # compact `a; b; c` in test setup is intentional

[tool.black]
line-length = 100
target-version = ["py311"]
